--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "netlify-plugin-cloudinary": "^0.0.9",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
